src/tests/snapshots/tera__tests__parser__parser_errors@loop_invalid_field.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/loop_invalid_field.txt
---
 Syntax error --> [loop_invalid_field.txt:1:23]
  |
1 | {% for a in v %}{{loop.none}}{% endfor %}
  |                        ^---
  = Found invalid field of `loop`: none. Only `index`, `index0`, `first`, `last` and `length` exist.
